avatar alignment fix

--- a/style.css
+++ b/style.css
@@ -415,7 +415,7 @@ nav ul li:first-child a {
   .avatars img {
     width: 50px;
     height: 50px;
-    margin-left: 0px;
+    margin-left: -15px;
   }
   .buttons {
     align-items: center;
